--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 
 [dependencies]
 burn = { version = "0.15.0", features = ["train", "wgpu", "metal", "metrics", "fusion"] }
+notify = { version = "7.0.0" }
 rapier2d = { version = "0.22.0", features = [ "simd-stable", "parallel", "debug-render" ] }
 raylib = { version = "5.0.2" }
+serde = { version = "1.0.216" }
 toml = { version = "0.8.19" }
-notify = { version = "7.0.0" }
-
