--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,13 @@ edition = "2021"
 
 [dependencies]
 burn = { version = "0.15.0", features = ["train", "wgpu", "metal", "metrics", "fusion"] }
-notify = { version = "7.0.0" }
-rapier2d = { version = "0.22.0", features = [ "simd-stable", "parallel", "debug-render" ] }
+
 raylib = { version = "5.0.2" }
-serde = { version = "1.0.216" }
+rapier2d = { version = "0.22.0", features = [ "simd-stable", "parallel", "debug-render" ] }
+
+notify = { version = "7.0.0" }
 toml = { version = "0.8.19" }
+serde = { version = "1.0.216" }
+
+log = { version = "0.4.22" }
+pretty_env_logger = { version = "0.5.0" }
